# CPresentation

./: CMakeLists.txt  README.md  Slide.cpp  Slide.h  main.cpp
.github/workflows/: cmake.yml  gcc.yml
utils/: config_parser.cpp  config_parser.h  console.cpp  console.h  slides_parser.cpp  slides_parser.h
